--- a/src/content/posts/example-post.mdx
+++ b/src/content/posts/example-post.mdx
@@ -1,11 +1,12 @@
 ---
 title: "Monitoring latency: Vercel Serverless Function vs Vercel Edge Function"
-description:
-  In this article, we will compare the latency of Edge Functions vs Serverless
-  Functions.
-author:
-  name: Thibault Le Ouay Ducasse
-  url: https://twitter.com/thibaultleouay
+description: |
+  In this article, we will compare the latency of Edge Functions vs Serverless Functions.
+authors:
+  - name: Thibault Le Ouay Ducasse
+    url: https://twitter.com/thibaultleouay
+  - name: Simon Theilgård Maribo
+    url: https://twitter.com/steilgaard
 publishedAt: 2024-03-14
 image: https://i.imgur.com/0mCya6S.png
 category: guides
