--- a/src/content/posts/example-post.mdx
+++ b/src/content/posts/example-post.mdx
@@ -3,10 +3,11 @@ title: "Monitoring latency: Vercel Serverless Function vs Vercel Edge Function"
 description: |
   In this article, we will compare the latency of Edge Functions vs Serverless Functions.
 authors:
-  - name: Thibault Le Ouay Ducasse
+  - name: Thibault Ducasse
     url: https://twitter.com/thibaultleouay
-  - name: Simon Theilgård Maribo
+  - name: Simon Maribo
     url: https://twitter.com/steilgaard
+    avatar: https://simonmaribo.dk/simonmaribo.png
 publishedAt: 2024-03-14
 image: https://i.imgur.com/0mCya6S.png
 category: guides
