--- a/src/content/posts/introducing-toolbird.mdx
+++ b/src/content/posts/introducing-toolbird.mdx
@@ -1,5 +1,5 @@
 ---
-title: 'Introducing Toolbird - the Toolbox for SaaS startups!'
+title: 'Introducing Toolbird - Get Web Analytics, Uptime Monitoring and User Feedback, all in 1 place.'
 description: Toolbird is a … … …
 authors:
     - name: Lasse Osmann
