--- a/src/content/posts/introducing-toolbird.mdx
+++ b/src/content/posts/introducing-toolbird.mdx
@@ -1,5 +1,5 @@
 ---
-title: 'Introducing Toolbird - Get Web Analytics, Uptime Monitoring and User Feedback, all in 1 place.'
+title: 'Analyze the locations of your website visitors with only 2 clicks using Toolbird Analytics'
 description: Toolbird is a … … …
 authors:
     - name: Lasse Osmann
@@ -9,7 +9,7 @@ authors:
       url: https://twitter.com/steilgaard
       avatar: https://simonmaribo.dk/simonmaribo.png
 publishedAt: 2024-05-17
-image: https://i.imgur.com/qyyxNDC.png
+image: /showcases/map.webp
 category: news
 ---
 
