--- a/src/content/posts/toolbird-vs-plausible.mdx
+++ b/src/content/posts/toolbird-vs-plausible.mdx
@@ -1,5 +1,5 @@
 ---
-title: 'Analyze the locations of your website visitors with only 2 clicks using Toolbird Analytic'
+title: 'Analyze the locations of your website visitors with only 2 clicks using Toolbird Analytics'
 description: Toolbird is a … … …
 authors:
     - name: Lasse Osmann
