--- a/src/content/posts/introducing-toolbird.mdx
+++ b/src/content/posts/introducing-toolbird.mdx
@@ -1,6 +1,6 @@
 ---
 title: 'Analyze the locations of your website visitors with only 2 clicks using Toolbird Analytic'
-description: Toolbird is a … … …
+description: Introducer Toolbird som selskab, værdier (public building/open stats) - samt de forskellige planer vi har for selskabet.
 authors:
     - name: Lasse Osmann
       url: https://twitter.com/lasse_osmann
