--- a/src/content/posts/introducing-toolbird.mdx
+++ b/src/content/posts/introducing-toolbird.mdx
@@ -13,15 +13,23 @@ image: /showcases/map.webp
 category: news
 ---
 
-What is Toolbird?
-Include that it is bootstrapped by two founders (Simon and Lasse)
+The best kind of AI is the kind that happens behind the scenes – the kind that makes your life easier without you even realizing it.
 
-What can you do with Toolbird?
+Think products like GitHub Copilot, which helps you write code faster, or Gmail's Smart Compose, which suggests completions for your sentences. AI assistants that seamlessly integrate into your workflow and make you more productive – without getting in the way.
 
-Web Analytics
+Today, we're introducing Dub AI in public beta with that very goal in mind – to help you manage your links more efficiently.
+The best kind of AI is the kind that happens behind the scenes – the kind that makes your life easier without you even realizing it.
 
-Monitoring
+Think products like GitHub Copilot, which helps you write code faster, or Gmail's Smart Compose, which suggests completions for your sentences. AI assistants that seamlessly integrate into your workflow and make you more productive – without getting in the way.
 
-User feedback
+Today, we're introducing Dub AI in public beta with that very goal in mind – to help you manage your links more efficiently.
+The best kind of AI is the kind that happens behind the scenes – the kind that makes your life easier without you even realizing it.
 
-Conclusion: Why is Toolbird the right choice for your tech needs?
+Think products like GitHub Copilot, which helps you write code faster, or Gmail's Smart Compose, which suggests completions for your sentences. AI assistants that seamlessly integrate into your workflow and make you more productive – without getting in the way.
+
+Today, we're introducing Dub AI in public beta with that very goal in mind – to help you manage your links more efficiently.
+The best kind of AI is the kind that happens behind the scenes – the kind that makes your life easier without you even realizing it.
+
+Think products like GitHub Copilot, which helps you write code faster, or Gmail's Smart Compose, which suggests completions for your sentences. AI assistants that seamlessly integrate into your workflow and make you more productive – without getting in the way.
+
+Today, we're introducing Dub AI in public beta with that very goal in mind – to help you manage your links more efficiently.
