--- a/src/content/posts/introducing-toolbird.mdx
+++ b/src/content/posts/introducing-toolbird.mdx
@@ -1,6 +1,6 @@
 ---
-title: 'Analyze the locations of your website visitors with only 2 clicks using Toolbird Analytic'
-description: Introducer Toolbird som selskab, værdier (public building/open stats) - samt de forskellige planer vi har for selskabet.
+title: 'Introducing Toolbird'
+description: Meet Toolbird. The platform that offers web analytics, uptime monitoring, user feedback and a list of other ready-to-use tools for SaaS startups and developers.
 authors:
     - name: Lasse Osmann
       url: https://twitter.com/lasse_osmann
@@ -9,7 +9,7 @@ authors:
       url: https://twitter.com/steilgaard
       avatar: https://simonmaribo.dk/simonmaribo.png
 publishedAt: 2024-05-17
-image: /showcases/map.webp
+image: /blog-images/introducing-toolbird.jpg
 category: news
 ---
 
