--- a/src/content/posts/introducing-toolbird.mdx
+++ b/src/content/posts/introducing-toolbird.mdx
@@ -17,8 +17,21 @@ The best kind of AI is the kind that happens behind the scenes – the kind that
 
 Think products like GitHub Copilot, which helps you write code faster, or Gmail's Smart Compose, which suggests completions for your sentences. AI assistants that seamlessly integrate into your workflow and make you more productive – without getting in the way.
 
+## By two teenage founders
+
 Today, we're introducing Dub AI in public beta with that very goal in mind – to help you manage your links more efficiently.
 The best kind of AI is the kind that happens behind the scenes – the kind that makes your life easier without you even realizing it.
+
+![alt text for screen readers](/people/founders.webp "Text to show on mouseover")
+
+> The overriding design goal for Markdown's
+> formatting syntax is to make it as readable
+> as possible. The idea is that a
+> Markdown-formatted document should be
+> publishable as-is, as plain text, without
+> looking like it's been marked up with tags
+> or formatting instructions.
+
 
 Think products like GitHub Copilot, which helps you write code faster, or Gmail's Smart Compose, which suggests completions for your sentences. AI assistants that seamlessly integrate into your workflow and make you more productive – without getting in the way.
 
