--- a/src/content/posts/many-saas-tools-vs-one-mega-tool.mdx
+++ b/src/content/posts/many-saas-tools-vs-one-mega-tool.mdx
@@ -1,5 +1,5 @@
 ---
-title: 'Analyze the locations of your website visitors with only 2 clicks using Toolbird Analytics'
+title: 'Having many SaaS tools versus using one mega toolbox'
 description: Toolbird is a … … …
 authors:
     - name: Lasse Osmann
@@ -10,7 +10,7 @@ authors:
       avatar: https://simonmaribo.dk/simonmaribo.png
 publishedAt: 2024-05-17
 image: /showcases/map.webp
-category: news
+category: engineering
 ---
 
 What is Toolbird?
