--- a/src/content/posts/how-to-start-using-web-analytics.mdx
+++ b/src/content/posts/how-to-start-using-web-analytics.mdx
@@ -9,7 +9,7 @@ authors:
       url: https://twitter.com/steilgaard
       avatar: https://simonmaribo.dk/simonmaribo.png
 publishedAt: 2024-05-17
-image: /blog-images/introducing-toolbird.jpg
+image: /blog-images/how-to-start-using-web-analytics.webp
 category: guides
 ---
 
