--- a/src/content/posts/introducing-toolbird.mdx
+++ b/src/content/posts/introducing-toolbird.mdx
@@ -12,15 +12,17 @@ publishedAt: 2024-05-17
 image: /blog-images/introducing-toolbird.webp
 category: news
 ---
+It all started, with us spotting a common issue in the SaaS community:
 
-The best kind of AI is the kind that happens behind the scenes – the kind that makes your life easier without you even realizing it.
+When building and scaling SaaS startups, various tools as web analytics, uptime monitoring and user feedback are essential for a clear project overview. Managing multiple subscriptions across different providers can be costly, averaging $69.34/month, and lead to poor overview. Toolbird offers the solution. 
 
-Think products like GitHub Copilot, which helps you write code faster, or Gmail's Smart Compose, which suggests completions for your sentences. AI assistants that seamlessly integrate into your workflow and make you more productive – without getting in the way.
+With Toolbird, 
 
-## By two teenage founders
 
-Today, we're introducing Dub AI in public beta with that very goal in mind – to help you manage your links more efficiently.
-The best kind of AI is the kind that happens behind the scenes – the kind that makes your life easier without you even realizing it.
+
+## Two teens, one startup
+
+The founding partners behind Toolbird are 18 year old Simon Maribo, and 17 year old Lasse Osmann.
 
 ![alt text for screen readers](/people/founders.webp "Text to show on mouseover")
 
