--- a/src/content/posts/introducing-toolbird.mdx
+++ b/src/content/posts/introducing-toolbird.mdx
@@ -14,19 +14,16 @@ category: news
 ---
 It all started, with us spotting a common issue in the SaaS community:
 
-When building and scaling SaaS startups, various tools as web analytics, uptime monitoring and user feedback are essential for a clear project overview. Managing multiple subscriptions across different providers can be costly, averaging $69.34/month, and lead to poor overview. Toolbird offers the solution. 
-
-With Toolbird, 
+When building and scaling SaaS startups, various tools as web analytics, uptime monitoring and user feedback are essential for a clear project overview. Managing multiple subscriptions across different providers can be costly, averaging $69.34/month, and lead to poor overview. Toolbird offers the solution, by providing web analytcis, user feedback and uptime monitoring in one collective place, with only a 5 minutte setup.
 
 
 
 ## Two teens, one startup
-
 The founding partners behind Toolbird are 18 year old Simon Maribo, and 17 year old Lasse Osmann.
 
 ![alt text for screen readers](/people/founders.webp "Text to show on mouseover")
 
-> The overriding design goal for Markdown's
+> With the time we're able to save, and the overview 
 > formatting syntax is to make it as readable
 > as possible. The idea is that a
 > Markdown-formatted document should be
