--- a/src/content/posts/how-to-start-using-web-analytics.mdx
+++ b/src/content/posts/how-to-start-using-web-analytics.mdx
@@ -1,6 +1,6 @@
 ---
 title: 'How to start using Toolbird Web Analytics'
-description: Meet Toolbird. The platform that offers web analytics, uptime monitoring, user feedback and a list of other ready-to-use tools for SaaS startups and developers.
+description: Toolbird web analytics allows you to track all traffic going through your website. Here is how to set it up as smoothly as possible in less than 2 minuttes.
 authors:
     - name: Lasse Osmann
       url: https://twitter.com/lasse_osmann
