--- a/src/content/posts/introducing-toolbird.mdx
+++ b/src/content/posts/introducing-toolbird.mdx
@@ -16,20 +16,33 @@ It all started, with us spotting a common issue in the SaaS community:
 
 When building and scaling SaaS startups, various tools as web analytics, uptime monitoring and user feedback are essential for a clear project overview. Managing multiple subscriptions across different providers can be costly, averaging $69.34/month, and lead to poor overview. Toolbird offers the solution, by providing web analytcis, user feedback and uptime monitoring in one collective place, with only a 5 minutte setup.
 
+Many SaaS-related tools tend to have advanced onboardings and setups, just to get the minimal essential flow of the tool to run, by supplying lots of catchy features that you don't use in the startup phase. **We believe it's a waste of time**. Toolbird strives after simplicity, ensuring that you can have each tool up and running within a few minutes.
 
+With all these values combined, you achieve many advantages with Toolbird:
 
-## Two teens, one startup
-The founding partners behind Toolbird are 18 year old Simon Maribo, and 17 year old Lasse Osmann.
+- Better overview, as all your tools are collected in one place, with one subscription.
+- Less costs, as we only price on what you use, with a flat monthly fee.
+- Time saving, as our onboarding takes 5 minutes or less.
 
-![alt text for screen readers](/people/founders.webp "Text to show on mouseover")
+## What you can do with Toolbird so far
+Our first beta-version for test users were live for the first time on May 12, 2024. This version includes the following tools and features ready to use:
 
-> With the time we're able to save, and the overview 
-> formatting syntax is to make it as readable
-> as possible. The idea is that a
-> Markdown-formatted document should be
-> publishable as-is, as plain text, without
-> looking like it's been marked up with tags
-> or formatting instructions.
+- Better overview, as all your tools are collected in one place, with one subscription.
+- Less costs, as we only price on what you use, with a flat monthly fee.
+- Time saving, as our onboarding takes 5 minutes or less.
+
+## What is next for Toolbird?
+Our first beta-version for test users were live for the first time on May 12, 2024. This version includes the following tools and features ready to use:
+
+- Better overview, as all your tools are collected in one place, with one subscription.
+- Less costs, as we only price on what you use, with a flat monthly fee.
+- Time saving, as our onboarding takes 5 minutes or less.
+
+## Journey of a teenage startup
+The founding partners behind Toolbird are 18 year old Simon Maribo, and 17 year old Lasse Osmann, both with experience in software development and digital products.
+
+![alt text for screen readers](/blog-images/founders.webp "Text to show on mouseover")
+
 
 
 Think products like GitHub Copilot, which helps you write code faster, or Gmail's Smart Compose, which suggests completions for your sentences. AI assistants that seamlessly integrate into your workflow and make you more productive – without getting in the way.
@@ -38,13 +51,20 @@ Today, we're introducing Dub AI in public beta with that very goal in mind – t
 The best kind of AI is the kind that happens behind the scenes – the kind that makes your life easier without you even realizing it.
 
 
+## Where we see ourselves in 5 years
+
+Think of the various tasks you perform on routine when starting to build a new digital platform / SaaS. You usually create a repository on GitHub to develop it, you create social accounts to promote it and you create a startup on Product Hunt to gain traction. Our long-term vision for Toolbird is very similar:
+
+> We aim to become the “go-to” tool-provider for solo developers and tech startups when building new products.
+
+As listed with the routine tasks mentioned above, we aim to make it standard for SaaS startups to sign up for Toolbird to manage their project, when starting to build something new. This is why, we've made our product as startup-friendly as possible.
 
 
-Think products like GitHub Copilot, which helps you write code faster, or Gmail's Smart Compose, which suggests completions for your sentences. AI assistants that seamlessly integrate into your workflow and make you more productive – without getting in the way.
 
-Today, we're introducing Dub AI in public beta with that very goal in mind – to help you manage your links more efficiently.
-The best kind of AI is the kind that happens behind the scenes – the kind that makes your life easier without you even realizing it.
+## Follow our journey
 
-Think products like GitHub Copilot, which helps you write code faster, or Gmail's Smart Compose, which suggests completions for your sentences. AI assistants that seamlessly integrate into your workflow and make you more productive – without getting in the way.
+We are very excited with the journey we have ahead of us building Toolbird, and we'd love you to join us! See how you can follow our development below:
 
-Today, we're introducing Dub AI in public beta with that very goal in mind – to help you manage your links more efficiently.
+- [Sign up for our monthly newsletter](https://breakdance.github.io/breakdance/)
+- [Find us on Twitter](https://breakdance.github.io/breakdance/)
+- [Find us on LinkedIn](https://breakdance.github.io/breakdance/)
