--- a/src/content/posts/introducing-toolbird.mdx
+++ b/src/content/posts/introducing-toolbird.mdx
@@ -27,16 +27,16 @@ With all these values combined, you achieve many advantages with Toolbird:
 ## What you can do with Toolbird so far
 Our first beta-version for test users were live for the first time on May 12, 2024. This version includes the following tools and features ready to use:
 
-- Better overview, as all your tools are collected in one place, with one subscription.
-- Less costs, as we only price on what you use, with a flat monthly fee.
-- Time saving, as our onboarding takes 5 minutes or less.
+- Web analytics tool, with analysis of refferals, pages, locations and devices.
+- Supplementary waitlist tool to collect signups for new launches.
+- Team collaboration, to work as effectively as possible.
 
 ## What is next for Toolbird?
-Our first beta-version for test users were live for the first time on May 12, 2024. This version includes the following tools and features ready to use:
+Over the coming months from now, there are several tools and features in the line:
 
-- Better overview, as all your tools are collected in one place, with one subscription.
-- Less costs, as we only price on what you use, with a flat monthly fee.
-- Time saving, as our onboarding takes 5 minutes or less.
+- Demo launch of uptime monitoring tool
+- Demo launch of user feedback tool
+- Custom event tracking (web analytics)
 
 ## Journey of a teenage startup
 The founding partners behind Toolbird are 18 year old Simon Maribo, and 17 year old Lasse Osmann, both with experience in software development and digital products.
@@ -44,11 +44,6 @@ The founding partners behind Toolbird are 18 year old Simon Maribo, and 17 year 
 ![alt text for screen readers](/blog-images/founders.webp "Text to show on mouseover")
 
 
-
-Think products like GitHub Copilot, which helps you write code faster, or Gmail's Smart Compose, which suggests completions for your sentences. AI assistants that seamlessly integrate into your workflow and make you more productive – without getting in the way.
-
-Today, we're introducing Dub AI in public beta with that very goal in mind – to help you manage your links more efficiently.
-The best kind of AI is the kind that happens behind the scenes – the kind that makes your life easier without you even realizing it.
 
 
 ## Where we see ourselves in 5 years
