--- a/src/content/posts/introducing-toolbird.mdx
+++ b/src/content/posts/introducing-toolbird.mdx
@@ -60,6 +60,6 @@ As listed with the routine tasks mentioned above, we aim to make it standard for
 
 We are very excited with the journey we have ahead of us building Toolbird, and we'd love you to join us! See how you can follow our development below:
 
-- [Sign up for our monthly newsletter](https://breakdance.github.io/breakdance/)
-- [Find us on Twitter](https://breakdance.github.io/breakdance/)
-- [Find us on LinkedIn](https://breakdance.github.io/breakdance/)
+- [Find Simon on Twitter](https://x.com/steilgaard)
+- [Find Lasse on Twitter](https://x.com/lasse_osmann)
+- [Find us on LinkedIn](https://www.linkedin.com/company/toolbird-io/)
