--- a/src/content/drafts/many-saas-tools-vs-one-mega-tool.mdx
+++ b/src/content/drafts/many-saas-tools-vs-one-mega-tool.mdx
@@ -20,8 +20,8 @@ What can you do with Toolbird?
 
 Web Analytics
 
-Monitoring
+Feedback Board
 
-User feedback
+User Surveys
 
 Conclusion: Why is Toolbird the right choice for your tech needs?
