--- a/src/content/posts/introducing-toolbird.mdx
+++ b/src/content/posts/introducing-toolbird.mdx
@@ -1,6 +1,6 @@
 ---
 title: 'Introducing Toolbird'
-description: Meet Toolbird. The platform that offers web analytics, feedback boards, user surveys and a list of other ready-to-use tools for SaaS startups and developers.
+description: Meet Toolbird. The platform that offers web analytics, feedback hub, user surveys and a list of other ready-to-use tools for SaaS startups and developers.
 authors:
     - name: Lasse Osmann
       url: https://twitter.com/lasse_osmann
@@ -15,7 +15,7 @@ category: news
 
 It all started, with us spotting a common issue in the SaaS community:
 
-When building and scaling SaaS startups, various tools as web analytics, feedback boards and user surveys are essential for a clear project overview. Managing multiple subscriptions across different providers can be costly, averaging $69.34/month, and lead to poor overview. Toolbird offers the solution, by providing web analytcis, feedback boards and user surveys in one collective place, with only a 5 minute setup.
+When building and scaling SaaS startups, various tools as web analytics, feedback hub and user surveys are essential for a clear project overview. Managing multiple subscriptions across different providers can be costly, averaging $69.34/month, and lead to poor overview. Toolbird offers the solution, by providing web analytcis, feedback hub and user surveys in one collective place, with only a 5 minute setup.
 
 Many SaaS-related tools tend to have advanced onboardings and setups, just to get the minimal essential flow of the tool to run, by supplying lots of catchy features that you don't use in the startup phase. **We believe it's a waste of time**. Toolbird strives after simplicity, ensuring that you can have each tool up and running within a few minutes.
 
@@ -37,7 +37,7 @@ Our first beta-version for test users were live for the first time on May 12, 20
 
 Over the coming months from now, there are several tools and features in the line:
 
--   Demo launch of Feedback Boards
+-   Demo launch of Feedback Hub
 -   Demo launch of User Surveys
 -   Custom event tracking (web analytics)
 
