--- a/src/content/drafts/many-saas-tools-vs-one-mega-tool.mdx
+++ b/src/content/drafts/many-saas-tools-vs-one-mega-tool.mdx
@@ -1,14 +1,11 @@
 ---
-title: 'Having many SaaS tools versus using one mega toolbox'
-description: Toolbird is a … … …
+title: 'Having many SaaS tools versus using one collective toolbox'
+description: When starting and building a new SaaS project, you usually find yourself subscribing to various tool-providers to get the essential features needed to manage your product. But what is better, having multiple subscriptions, or subscribing to an all-in-one toolbox?
 authors:
     - name: Lasse Osmann
       url: https://twitter.com/lasse_osmann
       avatar: https://gazellateam.com/team/lasseosmann.webp
-    - name: Simon Maribo
-      url: https://twitter.com/steilgaard
-      avatar: https://simonmaribo.dk/simonmaribo.png
-publishedAt: 2024-05-17
+publishedAt: 2024-06-14
 image: /showcases/map.webp
 category: engineering
 ---
