--- a/src/content/posts/many-saas-tools-vs-one-collective-toolbox.mdx
+++ b/src/content/posts/many-saas-tools-vs-one-collective-toolbox.mdx
@@ -7,7 +7,7 @@ authors:
       avatar: https://gazellateam.com/team/lasseosmann.webp
 publishedAt: 2024-06-14
 image: /blog-images/one-tool-vs-collective-toolbox.jpg
-category: engineering
+category: education
 ---
 
 In most cases, it comes down to the growth stage of your SaaS. Larger organizations and enterprises mostly have special needs for features, advanced systems and extra functionalities, while smaller startups prefer to have only the essential features from each tool, with simple onboardings and low pricing. When building new SaaS projects, there are 2 common tools to setup and manage in order to maximise product value and overview:
