--- a/src/content/posts/many-saas-tools-vs-one-collective-toolbox.mdx
+++ b/src/content/posts/many-saas-tools-vs-one-collective-toolbox.mdx
@@ -6,7 +6,7 @@ authors:
       url: https://twitter.com/lasse_osmann
       avatar: https://gazellateam.com/team/lasseosmann.webp
 publishedAt: 2024-06-14
-image: /blog-images/one-tool-vs-collective-toolbox.jpg
+image: /blog-images/one-tool-vs-collective-toolbox.webp
 category: education
 ---
 
