--- a/src/content/drafts/how-to-start-using-web-analytics.mdx
+++ b/src/content/drafts/how-to-start-using-web-analytics.mdx
@@ -1,6 +1,6 @@
 ---
 title: 'How to start using Toolbird Web Analytics'
-description: Toolbird web analytics allows you to track all traffic going through your website. Here is how to set it up as smoothly as possible in less than 2 minuttes.
+description: Toolbird Analytics allows you to track all traffic going through your website. 
 authors:
     - name: Lasse Osmann
       url: https://twitter.com/lasse_osmann
