--- a/src/content/posts/introducing-toolbird-analytics.mdx
+++ b/src/content/posts/introducing-toolbird-analytics.mdx
@@ -1,6 +1,6 @@
 ---
 title: 'Introducing Toolbird Analytics: Insights for every web-visitor'
-description: Meet Toolbird. The platform that offers web analytics, feedback hub, user surveys and a list of other ready-to-use tools for SaaS startups and developers.
+description: Toolbird Analytics allows you to track all traffic going through your website. 
 authors:
     - name: Lasse Osmann
       url: https://twitter.com/lasse_osmann
