--- a/src/content/drafts/introducing-toolbird-analytics.mdx
+++ b/src/content/drafts/introducing-toolbird-analytics.mdx
@@ -1,6 +1,6 @@
 ---
-title: 'Introducing Toolbird'
-description: Meet Toolbird. The platform that offers web analytics, feedback hub, user surveys and a list of other ready-to-use tools for SaaS startups and developers.
+title: 'Introducing Toolbird Analytics: Insights for every web-visitor'
+description: Toolbird Analytics allows you to track all traffic going through your website. 
 authors:
     - name: Lasse Osmann
       url: https://twitter.com/lasse_osmann
@@ -9,7 +9,7 @@ authors:
       url: https://twitter.com/steilgaard
       avatar: https://simonmaribo.dk/simonmaribo.png
 publishedAt: 2024-05-17
-image: /blog-images/introducing-toolbird.webp
+image: /blog-images/introducing-toolbird-analytics.webp
 category: news
 ---
 
