--- a/src/content/posts/introducing-toolbird-analytics.mdx
+++ b/src/content/posts/introducing-toolbird-analytics.mdx
@@ -24,22 +24,22 @@ In most cases, it comes down to the growth stage of your SaaS. Larger organizati
 -   **Bounce Rate** - 
 -   **Visit Duration** - 
 
+![alt text for screen readers](/blog-images/founders.webp 'Text to show on mouseover')
+
 ## Referrer Data
+Our first beta-version for test users were live for the first time on May 12, 2024. This version includes the following tools and features ready to use:
+
+## Device Data
+Our first beta-version for test users were live for the first time on May 12, 2024. This version includes the following tools and features ready to use:
+
+## Geographic Data
 Our first beta-version for test users were live for the first time on May 12, 2024. This version includes the following tools and features ready to use:
 
 ## Page Data
 Our first beta-version for test users were live for the first time on May 12, 2024. This version includes the following tools and features ready to use:
 
-## Geographic Data
-Our first beta-version for test users were live for the first time on May 12, 2024. This version includes the following tools and features ready to use:
-
-
-## Geographic Data
-Our first beta-version for test users were live for the first time on May 12, 2024. This version includes the following tools and features ready to use:
-
 
 ## Get 2 weeks free Toolbird today
-
 We are very excited with the journey we have ahead of us building Toolbird, and we'd love you to join us! See how you can follow our development below:
 
 -   [Find Simon on Twitter](https://x.com/steilgaard)
