--- a/src/content/drafts/introducing-toolbird-analytics.mdx
+++ b/src/content/drafts/introducing-toolbird-analytics.mdx
@@ -24,7 +24,7 @@ In most cases, it comes down to the growth stage of your SaaS. Larger organizati
 -   **Bounce Rate** - 
 -   **Visit Duration** - 
 
-![alt text for screen readers](/blog-images/founders.webp 'Text to show on mouseover')
+![alt text for screen readers](/blog-images/web-analytics-dashboard.webp 'Text to show on mouseover')
 
 ## Referrer Data
 Our first beta-version for test users were live for the first time on May 12, 2024. This version includes the following tools and features ready to use:
