--- a/src/content/drafts/introducing-toolbird-analytics.mdx
+++ b/src/content/drafts/introducing-toolbird-analytics.mdx
@@ -1,6 +1,6 @@
 ---
 title: 'Introducing Toolbird Analytics: Insights for every web-visitor'
-description: Toolbird Analytics allows you to track all traffic going through your website. 
+description: Toolbird Analytics allows you to track all traffic going through your website. With a simple 2-minutte onboarding, you can start collecting valuable data insights of your web visitors.
 authors:
     - name: Lasse Osmann
       url: https://twitter.com/lasse_osmann
@@ -13,13 +13,12 @@ image: /blog-images/introducing-toolbird-analytics.webp
 category: news
 ---
 
-It all started, with us spotting a common issue in the SaaS community:
+The first version of Toolbird Analytics is offcialy live, ready for use. With this version you can track:
 
-In most cases, it comes down to the growth stage of your SaaS. Larger organizations and enterprises mostly have special needs for features, advanced systems and extra functionalities, while smaller startups prefer to have only the essential features from each tool, with simple onboardings and low pricing. When building new SaaS projects, there are 2 common tools to setup and manage in order to maximise product value and overview:
-
+-   **Live Visitors** - Get realtime data on people visiting you in the moment. 
 -   **Unique Visitors** - 
--   **Total Visits** - 
--   **Total Pageviews** - 
+-   **Total Visits** - Track the total amount of 
+-   **Total Pageviews** - Track everytime a page is loaded, and when the URL changes.
 -   **Views Per Visit** - 
 -   **Bounce Rate** - 
 -   **Visit Duration** - 
@@ -37,6 +36,10 @@ Our first beta-version for test users were live for the first time on May 12, 20
 
 ## Page Data
 Our first beta-version for test users were live for the first time on May 12, 2024. This version includes the following tools and features ready to use:
+
+## Custom Event Tracking
+
+## Advanced Filtering
 
 
 ## Get 2 weeks free Toolbird today
