--- a/src/content/posts/introducing-toolbird-analytics.mdx
+++ b/src/content/posts/introducing-toolbird-analytics.mdx
@@ -8,7 +8,7 @@ authors:
     - name: Simon Maribo
       url: https://twitter.com/steilgaard
       avatar: https://simonmaribo.dk/simonmaribo.png
-publishedAt: 2024-05-17
+publishedAt: 2024-06-17
 image: /blog-images/introducing-toolbird-analytics.webp
 category: news
 ---
@@ -16,12 +16,12 @@ category: news
 The first version of Toolbird Analytics is offcialy live, ready for use. With this version you can track:
 
 -   **Live Visitors** - Get realtime data on people visiting you in the moment. 
--   **Unique Visitors** - 
--   **Total Visits** - Track the total amount of 
+-   **Unique Visitors** - Track the amount of unique visitors going through your page.
+-   **Total Visits** - Track the total amount of visit requests occuring on your page.
 -   **Total Pageviews** - Track everytime a page is loaded, and when the URL changes.
--   **Views Per Visit** - 
--   **Bounce Rate** - 
--   **Visit Duration** - 
+-   **Views Per Visit** - Track how many pages your visitors visit per session. 
+-   **Bounce Rate** - Track the percentage of people that land on your page and leave. 
+-   **Visit Duration** - Track the time your users spend on your site per single session.
 
 ![alt text for screen readers](/blog-images/web-analytics-dashboard.webp 'Text to show on mouseover')
 
@@ -43,8 +43,5 @@ Our first beta-version for test users were live for the first time on May 12, 20
 
 
 ## Get 2 weeks free Toolbird today
-We are very excited with the journey we have ahead of us building Toolbird, and we'd love you to join us! See how you can follow our development below:
 
--   [Find Simon on Twitter](https://x.com/steilgaard)
--   [Find Lasse on Twitter](https://x.com/lasse_osmann)
--   [Find us on LinkedIn](https://www.linkedin.com/company/toolbird-io/)
+Supercharge your user-driven SaaS development today with Toolbirds all-in-on user-insights toolbox. [Get 2 weeks free](https://app.toolbird.io/auth/register)
