--- a/src/content/posts/introducing-toolbird-analytics.mdx
+++ b/src/content/posts/introducing-toolbird-analytics.mdx
@@ -13,7 +13,7 @@ image: /blog-images/introducing-toolbird-analytics.webp
 category: news
 ---
 
-The first version of Toolbird Analytics is offcialy live, ready for use. With this version you can track:
+The first version of Toolbird Analytics is offcialy live and allows you to track:
 
 -   **Live Visitors** - Get realtime data on people visiting you in the moment. 
 -   **Unique Visitors** - Track the amount of unique visitors going through your page.
@@ -42,6 +42,6 @@ Our first beta-version for test users were live for the first time on May 12, 20
 ## Advanced Filtering
 
 
-## Get 2 weeks free Toolbird today
+## Try Toolbird for free today
 
 Supercharge your user-driven SaaS development today with Toolbirds all-in-on user-insights toolbox. [Get 2 weeks free](https://app.toolbird.io/auth/register)
