--- a/src/content/drafts/introducing-toolbird-analytics.mdx
+++ b/src/content/drafts/introducing-toolbird-analytics.mdx
@@ -26,21 +26,21 @@ The first version of Toolbird Analytics is offcialy live and allows you to track
 ![alt text for screen readers](/blog-images/web-analytics-dashboard.webp 'Text to show on mouseover')
 
 ## Referrer Data
-Our first beta-version for test users were live for the first time on May 12, 2024. This version includes the following tools and features ready to use:
+With referrer data you're able to track exactly where your visitors are referred to your website from. You can use this data to optimize your landing page, all depending on the audience visiting your page. 
 
 ## Device Data
-Our first beta-version for test users were live for the first time on May 12, 2024. This version includes the following tools and features ready to use:
+Responsiveness on the web is crucial for converting visitors into customers. With device data you're able to measure how many of your visitors are on mobile, desktop, laptop etc. Along with device data, you're able to track the operating system and browser of your users.
 
 ## Geographic Data
-Our first beta-version for test users were live for the first time on May 12, 2024. This version includes the following tools and features ready to use:
+With geographic you're able to track where in the world your visitors come from. Our analytics goes in detail, allowing you to track countries, regions and cities.
 
 ## Page Data
-Our first beta-version for test users were live for the first time on May 12, 2024. This version includes the following tools and features ready to use:
-
+Get direct insights on what pages your visitors visit the most. 
 ## Custom Event Tracking
 
 ## Advanced Filtering
 
+## How is it Privacy Friendly?
 
 ## Try Toolbird for free today
 
