--- a/src/content/drafts/introducing-toolbird-analytics.mdx
+++ b/src/content/drafts/introducing-toolbird-analytics.mdx
@@ -27,6 +27,7 @@ The first version of Toolbird Analytics is offcialy live and allows you to track
 
 ## Referrer Data
 With referrer data you're able to track exactly where your visitors are referred to your website from. You can use this data to optimize your landing page, all depending on the audience visiting your page. 
+![alt text for screen readers](/blog-images/referrer.webp 'Text to show on mouseover')
 
 ## Device Data
 Responsiveness on the web is crucial for converting visitors into customers. With device data you're able to measure how many of your visitors are on mobile, desktop, laptop etc. Along with device data, you're able to track the operating system and browser of your users.
@@ -35,7 +36,8 @@ Responsiveness on the web is crucial for converting visitors into customers. Wit
 With geographic you're able to track where in the world your visitors come from. Our analytics goes in detail, allowing you to track countries, regions and cities.
 
 ## Page Data
-Get direct insights on what pages your visitors visit the most. 
+Get direct insights on what pages your visitors visit the most. Optimize each page depending on your visitors behaviour.
+
 ## Custom Event Tracking
 
 ## Advanced Filtering
