--- a/src/content/posts/introducing-toolbird-analytics.mdx
+++ b/src/content/posts/introducing-toolbird-analytics.mdx
@@ -37,10 +37,21 @@ With geographic you're able to track where in the world your visitors come from.
 
 ## Page Data
 Get direct insights on what pages your visitors visit the most. Optimize each page depending on your visitors behaviour.
+![alt text for screen readers](/blog-images/page.webp 'Text to show on mouseover')
 
 ## Custom Event Tracking
+Enhance your web analytics with Custom Event Tracking, a powerful feature designed to provide detailed insights into user interactions beyond standard metrics. Capture specific actions such as form submissions, video plays, downloads, and button clicks.
 
 ## Advanced Filtering
+With Toolbird Analytics you're capable of filtering your data on various parameters:
+
+-   **Minutes and Hours** - Filter your data either by minute or hour.
+-   **Larger time stamps** - Filter your data by days, months, years, all time or custom date ranges.
+-   **Pages** - View complete analytics of one or more pages in particular. 
+-   **Geography** - View complete analytics of one or more countries, regions and cities in particular. 
+-   **Devices** - View complete analytics of one or more browsers, operating systems and devices in particular. 
+-   **Sources** - View complete analytics of one or more referring sources in particular. 
+
 
 ## How is it Privacy Friendly?
 
