--- a/src/content/drafts/top-10-google-analytics-alternatives.mdx
+++ b/src/content/drafts/top-10-google-analytics-alternatives.mdx
@@ -1,6 +1,6 @@
 ---
 title: 'Top 10 Google Analytics alternatives'
-description: In this list we've collected the 10 best privacy-friendly Google Analytics alternatives for you and your organization to use.
+description: In this list we've collected the 10 best privacy-friendly Google Analytics alternatives for you and your organization to use, based on pricing, privacy and features.
 authors:
     - name: Lasse Osmann
       url: https://twitter.com/lasse_osmann
