--- a/src/content/drafts/top-10-google-analytics-alternatives.mdx
+++ b/src/content/drafts/top-10-google-analytics-alternatives.mdx
@@ -15,7 +15,15 @@ In most cases, it comes down to the growth stage of your SaaS. Larger organizati
 
 
 ## 1. Toolbird Analytics
-## 2. Pirsch
+## 2. Plausible
+## 3. Pirsch
+## 4. Piwik Pro
+## 5. Hotjar
+## 6. Plausible
+## 7. Pirsch
+## 8. Plausible
+## 9. Pirsch
+## 10. Pirsch
 
 
 
