--- a/src/content/posts/top-3-toolbird-analytics-use-cases.mdx
+++ b/src/content/posts/top-3-toolbird-analytics-use-cases.mdx
@@ -10,13 +10,14 @@ image: /blog-images/top-10-google-analytics-alternatives.webp
 category: education
 ---
 
-In most cases, it comes down to the growth stage of your SaaS. Larger organizations and enterprises mostly have special needs for features, advanced systems and extra functionalities, while smaller startups prefer to have only the essential features from each tool, with simple onboardings and low pricing. When building new SaaS projects, there are 2 common tools to setup and manage in order to maximise product value and overview:
+As you know Toolbird Analytics, we allow you to track all traffic going through your website, including device data, page data, referrer data, geographic data and more. these are just numbers, but how can you use them to improve your product? It's broken down into three main categories:
 
--   **Web Analytics**
--   **User Feedback**
+-   **Conversion optimization**
+-   **Ad tracking**
+-   **Customer behaviour**
 
 
-## Pros of using a collective toolbox
+## Conversion optimization
 
 -   **Better overview**: By having one collective toolbox to manage the essential tools for your SaaS, you achieve a larger overview, as you switch from managing multiple subscriptions across different platforms, to controlling everything from one place.
 -   **No bloated tools**: Collective toolboxes focus on offering only the essential features of each tool, to simplify onboardings, and maximise value.
