--- a/src/content/drafts/top-3-toolbird-analytics-use-cases.mdx
+++ b/src/content/drafts/top-3-toolbird-analytics-use-cases.mdx
@@ -13,19 +13,22 @@ category: education
 As you know Toolbird Analytics, we allow you to track all traffic going through your website, including device data, page data, referrer data, geographic data and more. these are just numbers, but how can you use them to improve your product? It's broken down into three main categories:
 
 -   **Conversion optimization**
--   **Ad tracking**
+-   **User experience**
 -   **Customer behaviour**
 
 
 ## Conversion optimization
 
--   **Better overview**: By having one collective toolbox to manage the essential tools for your SaaS, you achieve a larger overview, as you switch from managing multiple subscriptions across different platforms, to controlling everything from one place.
--   **No bloated tools**: Collective toolboxes focus on offering only the essential features of each tool, to simplify onboardings, and maximise value.
 
-## Cons of using a collective toolbox
+
+## User experience
 
 -   **Limited features**: As your SaaS grows, your needs for specific tool-features follow, and most "all-in-one" toolboxes only offer the most essential features from each tool, limiting the possibilities of what you can use them for.
 
-## The vision behind Toolbird
+## Customer behaviour
 
 Toolbird offers one collective toolbox for SaaS startups in the early stages, by providing web analytics, feedback hub and user surveys in one collective place, with only a 5-minute setup. [Start your 14-day free trial today](https://app.toolbird.io/auth/login)
+
+## Try Toolbird for free today
+
+Supercharge your user-driven SaaS development today with Toolbirds all-in-on user-insights toolbox. [Get 2 weeks free](https://app.toolbird.io/auth/register)
