--- a/src/content/posts/top-3-toolbird-analytics-use-cases.mdx
+++ b/src/content/posts/top-3-toolbird-analytics-use-cases.mdx
@@ -18,6 +18,8 @@ As you know Toolbird Analytics, we allow you to track all traffic going through 
 
 ## Conversion optimization
 
+When getting to know exactly what pages your customers visit the most, what elements on your site they click on, and how much time they spend on each subpage, you&apos;re capable of making data-driven decisions on where to improve your website for more conversions, hereby more sales. Let&apos;s dive into an example. On your [Toolbird Analytics](https://app.toolbird.io/auth/login) dashboard you see that the majority of visitors leave your landing-page before hitting the call-to-action button in the bottom. This piece of data-information indcates, that you might want to make a more seamless landing-page-flow, so your customers makes it to the bottom to take action more easily.
+
 ## User experience
 
 -   **Limited features**: As your SaaS grows, your needs for specific tool-features follow, and most "all-in-one" toolboxes only offer the most essential features from each tool, limiting the possibilities of what you can use them for.
