--- a/src/content/drafts/top-3-toolbird-analytics-use-cases.mdx
+++ b/src/content/drafts/top-3-toolbird-analytics-use-cases.mdx
@@ -24,7 +24,7 @@ On your [Toolbird Analytics](https://app.toolbird.io/auth/login) dashboard you s
 
 ## User experience
 
--   **Limited features**: As your SaaS grows, your needs for specific tool-features follow, and most "all-in-one" toolboxes only offer the most essential features from each tool, limiting the possibilities of what you can use them for.
+This use case goes hand in hand with conversion optimization. As [Toolbird Analytics](https://app.toolbird.io/auth/login) provides you all the device data for all your online visitors, hereby operating system, browser and device, you&apos;re capable of adjusting the reponsivnes as much as possible, to hit the majority of your audience the best way possible.
 
 ## Customer behaviour
 
